--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,17 +32,14 @@ services:
     container_name: mysql_db
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: 12345678
+      MYSQL_DATABASE: example_app
     ports:
       - "3307:3306"
     volumes:
       - db_data:/var/lib/mysql
     networks:
       - laravel
-
 networks:
   laravel:
 
